<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="title">Welcome To</string>
    <string name="app_name">Tabu</string>
    <string name="arcade">ARCADE</string>
    <string name="online">ONLINE</string>
    <string name="user">User Profile</string>
    <string name="friend">INVITE FRIENDS</string>
    <string name="arcade_describe">Choose a country and learn\n about taboos in that country.</string>
    <string name="online_describe">Compete with other players\n to get a high score.</string>
    <string name="user_describe">Check your scores or \n create a new user.</string>
    <string name="friend_describe">Tell your friends about \n this game.</string>
    <string name="pick_title">Pick a Country</string>
    <string name="introdescribe">You will visit China for two days with a limited  amount of money. There are different levels that will be unlocked as you progress through the story line. Your objective is to pass all the levels with the largest sum of money at the end. If at any time you run out of money, you will have to start again from the first level.</string>
</resources>
