<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:weightSum="1"
    android:paddingTop="300dp"
    android:gravity="center_horizontal"
    android:background="@drawable/titlescreen_00"
    >
	<!--Use this code if you want the title to just be an image, not background picture
		<ImageView 
			android:src="@drawable/tabu_title" 
			android:id="@+id/imageView1" 
			android:gravity="center" 
			android:layout_width="672dp" android:layout_height="290dp">
		</ImageView>
	-->
	
	<LinearLayout 
		android:orientation="vertical"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:padding="30dp"
		>
		<Button 
			android:layout_height="100dp"
			android:text="@string/arcade"
			android:id="@+id/Button01"
			android:textSize="60dp"
			android:layout_width="450dp"
			android:background="@drawable/button_color"
			android:onClick="onArcadeClicked"
		>
		</Button>
		<TextView 
			android:layout_height="fill_parent"
			android:layout_width="wrap_content"
			android:text="@string/arcade_describe"
			android:textSize="30sp"
			android:textColor="#000033"
		></TextView>
	</LinearLayout>
	<LinearLayout 
		android:orientation="vertical"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:padding="30dp"
		android:gravity="center_horizontal"
		>
		<Button 
			android:layout_height="100dp" 
			android:text="@string/online" 
			android:id="@+id/Button02" 
			android:textSize="60sp" 
			android:layout_width="450dp"
			android:background="@drawable/button_color"
			android:onClick="onOnlineClicked"
			>
		</Button>
		<TextView 
			android:layout_height="fill_parent"
			android:layout_width="wrap_content"
			android:text="@string/online_describe"
			android:textSize="30sp"
			android:textColor="#000033"
			android:paddingBottom="20dp"
		></TextView>
		
		<Button 
			android:layout_height="70dp" 
			android:text="@string/friend" 
			android:id="@+id/Button03" 
			android:textSize="35sp" 
			android:layout_width="350dp"
			android:background="@drawable/button_color"
			android:onClick="onInviteClicked"
			>
		</Button>
		<TextView
			android:layout_height="fill_parent"
			android:layout_width="wrap_content"
			android:text="@string/friend_describe"
			android:textSize="25dp" 
			android:textColor="#000033"
		></TextView>
	</LinearLayout>
</LinearLayout>
